Update: 잘못된 설정 값 및 설계 오류 업데이트