@@ -2,7 +2,6 @@ package shop.genieus.product.presentation.event.mapper;
 
 import com.genieus.common.event.order.OrderCanceledEvent;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 import shop.genieus.product.application.in.command.dto.RestoreStockCommand;
 import shop.genieus.product.application.in.command.dto.RestoreStockCommand.RestoreStockItem;
@@ -13,7 +12,7 @@ public class ProductEventMapper {
     List<RestoreStockItem> items =
         event.orderProductItems().stream()
             .map(item -> new RestoreStockItem(item.productId(), item.quantity()))
-            .collect(Collectors.toList());
+            .toList();
 
     return new RestoreStockCommand(event.orderId(), items, event.canceledAt());
   }
